<resources>
    <string name="app_name">Final Project</string>
    <string name="dictionaryWelcomeText">Welcome to the Mobile Dictionary!</string>
    <string name="dictionaryEnterText">Enter term to lookup below.</string>
    <string name="dictionaryLookupHint">Search the Mobile Dictionary.</string>
    <string name="dictionaryBtnLookup">Lookup</string>
    <string name="dictionarySavedSearches">Saved</string>
    <string name="dictionaryBtnSearch">Search</string>
    <string name="sunrise_and_sunset_lookup">Sunrise and Sunset Lookup</string>
    <string name="recipe_search">Recipe Search</string>
    <string name="dictionary">Dictionary</string>
    <string name="deezer_song_search">Deezer Song Search</string>
    <string name="recipe_search_menu_home">Home</string>
    <string name="recipe_search_menu_save_recipe">Save recipe</string>
    <string name="recipe_search_menu_delete_recipe">Delete recipe</string>
    <string name="recipe_search_menu_view_recipes">View saved recipes</string>
    <string name="recipe_search_menu_help">Help</string>
    <string name="recipe_search_menu_about">About</string>
    <string name="recipe_search_help_title">Instructions:</string>
    <string name="recipe_search_help_message">1. Use the search bar to find your desired recipe.\n2. Click on a recipe to view detailed information.\n3. Save recipes you love for easy access anytime.\n4. Explore and manage your saved recipes by tapping the \"View saved recipes\" button.</string>
    <string name="recipe_search_help_button">OK</string>
    <string name="recipe_search_about_message">Version 1.0, created by Lixdel Louisse Aggabao</string>
    <string name="recipe_search_search_hint">Search recipe...</string>
    <string name="recipe_search_delete_recipe_title">Question:</string>
    <string name="recipe_search_delete_recipe_message">Do you want to delete the recipe:</string>
    <string name="recipe_search_delete_recipe_positive">Yes</string>
    <string name="recipe_search_delete_recipe_negative">No</string>
    <string name="recipe_search_delete_recipe_confirmation">You deleted recipe:</string>
    <string name="recipe_search_delete_recipe_undo">Undo</string>
    <string name="recipe_search_successful_save_message">Recipe saved successfully.</string>
    <string name="recipe_search_failed_save_message">This recipe already exists in your saved recipes.</string>
    <string name="recipe_search_saved_recipes_text">Saved Recipes</string>
    <string name="recipe_search_image_description">Image of</string>
    <string name="delete_confirmation_title">Question</string>
    <string name="delete_confirmation_message">Do you want to delete this Song?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="about_message">Ali Komijani</string>
    <string name="song_deleted_message">You deleted a Song</string>
    <string name="undo">Undo</string>
    <string name="song_saved_message">You inserted a song into the database</string>
    <string name="search_button">Search</string>
    <string name="save_button">Save</string>
    <string name="inserted_song_message">You inserted a song into the database</string>
    <string name="enter_search_query">Enter search query</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="delete_button">Delete</string>
    <string name="about_button">About</string>
    <string name="sunrise_time">Sunrise time is: %1$s</string>
    <string name="sunset_time">Sunset time is: %1$s</string>
    <string name="data_saved_to_favorites">Data saved to favorites!</string>
    <string name="failed_to_save_data_to_favorites">Failed to save data to favorites</string>
    <string name="app_help_message">This app was provided by Mohammadhassan Yeganeshenas</string>
    <string name="save_to_database">Save to Database</string>
    <string name="confirm_save_to_database">Are you sure you want to add this data to the database?</string>
    <string name="data_saved_to_database">Data saved to the database!</string>
    <string name="failed_to_save_data_to_database">Failed to save data to the database</string>
    <string name="cancel">Cancel</string>
    <string name="lookupButton"> Lookup </string>
    <string name="help">Help</string>
</resources>
